1.2 update: fixed the z-index order
git-svn-id: https://plugins.svn.wordpress.org/wordcamp-lisbon-ribbon/trunk@599268 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wclx2012-ribbon.css
+++ b/css/wclx2012-ribbon.css
@@ -1,6 +1,9 @@
 /* WordCamp Lisboa Ribbon specific CSS styles */
 
 a.wclx-ribbon {
+	cursor:pointer;
+	position:fixed;
+	z-index:12345;
 	-webkit-transition:all 0.12s ease !important;
 	-moz-transition:all 0.12s ease !important;
 	transition:all 0.12s ease !important;
@@ -11,25 +14,24 @@ a:hover.wclx-ribbon {
 	filter: alpha(opacity=90);
 	opacity:0.9;
 }
+	a.wclx-ribbon-right {
+		right:0px;
+	}
+
+	a.wclx-ribbon-left {
+		left:0px;
+	}
+	
 
 .wclx-ribbon-image {
 	margin:0px;
-	cursor:pointer;
+	padding:0px;
 	border:none;
-	position:fixed;
-	z-index:12345;
-}
-
-.wclx-ribbon-image-right {
-	right:0px;
-}
-
-.wclx-ribbon-image-left {
-	left:0px;
+	z-index:12344;
 }
 
 @media only screen and (max-width:768px) {
-	.wclx-ribbon-image {
+	.wclx-ribbon {
 		width:100px;
 		height:auto;
 	}
